Bug 955735 - Reorganize the code in nsScriptLoader to eliminate some rooting hazards; r=smaug